src/test/ui/asm/asm-out-no-modifier.stderr
error[E0661]: output operand constraint lacks '=' or '+'
  --> $DIR/asm-out-no-modifier.rs:22:34
   |
LL |         llvm_asm!("mov $1, $0" : "r"(x) : "r"(5));
   |                                  ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0661`.
